--- a/index.html
+++ b/index.html
@@ -1,60 +1,60 @@
----
-layout: uikit-plain
----
-
-<div class="uk-container">
-    <div class="uk-child-width-1-2@s 
-                uk-child-width-1-3@m
-                uk-child-width-1-4@l
-                uk-text-center" uk-grid>
-        <div class="uk-card uk-card-default uk-card-body">
-            <h3 class="uk-card-title">Tobias</h3>
-            <p>Lorem ipsum <a href="#">dolor</a> sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-        <div class="uk-card uk-card-default uk-card-body">
-            <h3 class="uk-card-title">Default</h3>
-            <p>Lorem ipsum <a href="#">dolor</a> sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-        <div class="uk-card uk-card-default uk-card-body">
-            <h3 class="uk-card-title">Default</h3>
-            <p>Lorem ipsum <a href="#">dolor</a> sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-        <div class="uk-card uk-card-default uk-card-body">
-            <h3 class="uk-card-title">Default</h3>
-            <p>Lorem ipsum <a href="#">dolor</a> sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-        <div class="uk-card uk-card-default uk-card-body">
-            <h3 class="uk-card-title">Default</h3>
-            <p>Lorem ipsum <a href="#">dolor</a> sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-        <div class="uk-card uk-card-default uk-card-body">
-            <h3 class="uk-card-title">Default</h3>
-            <p>Lorem ipsum <a href="#">dolor</a> sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-        <div class="uk-card uk-card-default uk-card-body">
-            <h3 class="uk-card-title">Default</h3>
-            <p>Lorem ipsum <a href="#">dolor</a> sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-        <div class="uk-card uk-card-default uk-card-body">
-            <h3 class="uk-card-title">Default</h3>
-            <p>Lorem ipsum <a href="#">dolor</a> sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-        <div class="uk-card uk-card-default uk-card-body">
-            <h3 class="uk-card-title">Default</h3>
-            <p>Lorem ipsum <a href="#">dolor</a> sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-        <div class="uk-card uk-card-default uk-card-body">
-            <h3 class="uk-card-title">Default</h3>
-            <p>Lorem ipsum <a href="#">dolor</a> sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-        <div class="uk-card uk-card-default uk-card-body">
-            <h3 class="uk-card-title">Default</h3>
-            <p>Lorem ipsum <a href="#">dolor</a> sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-        <div class="uk-card uk-card-default uk-card-body">
-            <h3 class="uk-card-title">Default</h3>
-            <p>Lorem ipsum <a href="#">dolor</a> sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-    </div>
+!doctype html>
+<html>
+	<head>
+        <script>
+            console.log("Hello World");
+            document.addEventListener('DOMContentLoaded', e => {
+            document.body.append("Hello World");
+            let el = document.querySelector("#world");
+            el.addEventListener("click", function(){ el.style.color="green";});
+            });
+        </script>
+        <link rel="stylesheet" href="style.css">
+		<meta charset="utf-8" /> 
+		<title>Title Bar Texthhh</title>
+    </head>
+        
+<body>
+	<h1>Chapter Title</h1>
+<p>The first paragraph is the most <em>important</em>.</p>
+<blockquote cite="https://en.wi<kiquote.org/wiki/Marie_Curie">
+    Be less curious about people and more curious about ideas.
+  </blockquote>
+  <h2>  Header</h2>
+<table>
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Head</th>
+          </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td id="world">Hallo1</td>>
+            <td>Hallo2</td>>
+        </tr>
+        <tr>
+            <td>Hallo3</td>>
+            <td>Hallo4</td>>
+        </tr>
+        <tr>
+            <td>Hallo5</td>>
+            <td>Hallo6</td>>
+        </tr>
+    </tbody>
+</table>
+<div class="wide-stuff">
+<p>My list:</p>
+<ul>
+    <li class="item">first</li>
+    <li>second</li>
+    <li>third</li>
+</ul>
 </div>
-
+<div class="wide-stuff">
+    <img src="componentslongterm.png" alt="Happy", class="img"/> 
+    <br>
+    <a href="https://docs.google.com/presentation/d/1L3f4eNUpTs6BiU-I6HjzBntceH5kI7mnbP9oO17Fjf4/edit#slide=id.ga90e75edb_041">Tutorial</a>
+</div>
+</body>
+</html>
