--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <li>third</li>
 </ul>
 </div>
-<div class="wide-stuff">
+<div>
     <img src="componentslongterm.png" alt="Happy", class="img"/> 
     <br>
     <a href="https://docs.google.com/presentation/d/1L3f4eNUpTs6BiU-I6HjzBntceH5kI7mnbP9oO17Fjf4/edit#slide=id.ga90e75edb_041">Tutorial</a>
